@@ -57,6 +57,7 @@ Version 1.1.15 under development
 - Enh #1893: Added Schema and native connection support for the CUBRID DBMS (http://www.cubrid.org/) (kadishmal)
 - Enh #2540: Enable CJSON to use JsonSerializable interface when serializing objects (sammousa)
 - Enh #2664: Added support for HTTP PATCH requests to CHttpRequest (cebe)
+- Enh #2683: Application generated by webapp command is not HTML by default (cebe)
 - Enh #2688: CHtml::beginForm() now supports additional HTTP methods, via a hidden `_method` field. (phpnode)
 - Enh #2722: CFileHelper::findFiles() accepts absolutePaths in $options and returns absolute paths if true or relative ones otherwise (defaults to true) (pavel-voronin)
 - Enh #2737: CFileCache: added cachePathMode and cacheFileMode options to set modes used by chmod() for cache directory and files (ujovlado)
